--- a/app/views/JobDetail.scala.html
+++ b/app/views/JobDetail.scala.html
@@ -1,19 +1,18 @@
 @(job: JobInfo)
 
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Job: @job.id</title>
-  </head>
-  <body>
-    <table>
-      <tr>
-        <th>Messages</th>
-      </tr>
-      @for(message <- job.messages) {
-        <tr><td>@message</td></tr>
-      }
-    </table>
-  </body>
-</html>
+@main(s"Job: ${job.id}") {
+  <div class="container-fluid">
+    <div class="row">
+      <table class="table table-hover">
+        <tr>
+          <th>Messages</th>
+        </tr>
+        @for(message <- job.messages) {
+          <tr>
+            <td>@message</td>
+          </tr>
+        }
+      </table>
+    </div>
+  </div>
+}
