--- a/app/views/JobTable.scala.html
+++ b/app/views/JobTable.scala.html
@@ -1,7 +1,7 @@
 @(jobs: Seq[Job])
 
 @jobrow(job: Job) = {
-  <tr>
+  <tr ng-click="showJob(@job.id)">
     <td>@job.id</td>
     <td>@job.priority</td>
     <td>@job.name</td>
@@ -13,27 +13,32 @@
   </tr>
 }
 
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Jobs</title>
-  </head>
-  <body>
-    <table>
-      <tr>
-        <th>ID</th>
-        <th>Priority</th>
-        <th>Name</th>
-        <th>Owner</th>
-        <th>State</th>
-        <th>Start</th>
-        <th>Queue</th>
-        <th>Slots</th>
-      </tr>
-      @for(job <- jobs) {
-        @jobrow(job)
-      }
-    </table>
-  </body>
-</html>
+@main("Jobs") {
+  <div ng-app="CkitApp" ng-controller="CkitCtrl">
+    <div class="container-fluid">
+      <div class="row">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Priority</th>
+              <th>Name</th>
+              <th>Owner</th>
+              <th>State</th>
+              <th>Start</th>
+              <th>Queue</th>
+              <th>Slots</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for(job <- jobs) {
+              @jobrow(job)
+            }
+          </tbody>
+        </table>
+      <div>
+    </div>
+  </div>
+  <script src="@routes.WebJarAssets.at(WebJarAssets.locate("angular.min.js"))" type='text/javascript'></script>
+  <script src="@routes.Assets.at("javascripts/ckit.js")" type="text/javascript"></script>
+}
