unknown and accounting job detail pages
- check if job is active in current system
- if not try accounting db
- if also not display unknown job page

--- a/app/views/JobDetailRunning.scala.html
+++ b/app/views/JobDetailRunning.scala.html
@@ -1,6 +1,6 @@
 @(job: RunningJobInfo)
 
-<!-- TODO server chang event stream: update chart(s) for each task -->
+<!-- TODO server change event stream: update chart(s) for each task -->
 
 @main(s"Job: ${job.id}") {
 <div class="container-fluid">
