adds tasks to job table

--- a/app/views/JobTable.scala.html
+++ b/app/views/JobTable.scala.html
@@ -18,6 +18,7 @@
     <td>@job.start</td>
     <td>@job.queue</td>
     <td>@job.slots</td>
+    <td>@job.tasks</td>
   </tr>
 }
 
@@ -36,6 +37,7 @@
               <th>Start</th>
               <th>Queue</th>
               <th>Slots</th>
+              <th>Tasks</th>
             </tr>
           </thead>
           <tbody>
